Try to install libuv on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: csharp
 sudo: false
+install:
+  - curl -sSL https://github.com/libuv/libuv/archive/v1.4.2.tar.gz | tar zxfv - -C /tmp && cd /tmp/libuv-1.4.2/
+  - sh autogen.sh
+  - ./configure --prefix=$HOME/libuvinstall
+  - make
+  - make install
+  - export LD_LIBRARY_PATH="$HOME/libuvinstall/lib"
+  - cd $OLDPWD
 script:
   - ./build.sh --quiet verify
